--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 # Site Author
 author:
   name             : "Ze Zhang"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/selfie_2023_winter.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Still a traveller..."
   location         : "GOT, Sweden"
   # email            : "zhze.zhang@gmail.com"
