update google scholar

--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,7 @@ author:
       url: "https://github.com/Woodenonez"
     - label: "Google Scholar"
       icon: "fab fa-fw fa-google-scholar"
-      url: "https://scholar.google.com/citations?user=smzgp_gAAAAJ&hl=en"
+      url: "https://scholar.google.com/citations?user=zsUc-gkAAAAJ&hl=en"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/zhze17819/"
