update info & upload cv

--- a/_config.yml
+++ b/_config.yml
@@ -135,6 +135,9 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/zhze17819/"
+    - label: "CV"
+      icon: "fas fa-fw fa-file-pdf"
+      url: "assets/CV_202506.pdf"
     # - label: "Website"
     #   icon: "fas fa-fw fa-link"
     #   url: "https://your-website.com"
